# freeglut_clion

./: .gitignore  CMakeLists.txt  README.md  main.cpp
